[package]
name = "kvm-bindings"
version = "0.6.0"
authors = ["Amazon firecracker team <firecracker-devel@amazon.com>"]
description = "Rust FFI bindings to KVM generated using bindgen."
repository = "https://github.com/rust-vmm/kvm-bindings"
readme = "README.md"
keywords = ["kvm"]
license = "Apache-2.0"

[features]
fam-wrappers = ["vmm-sys-util"]
with-serde = ["serde", "serde_derive"]

[dependencies]
serde = { version = ">=1.0.27", optional = true }
serde_derive = { version = ">=1.0.27", optional = true }
vmm-sys-util = { version = "0.11.0", optional = true }

[dev-dependencies]
serde_json = ">=1.0.9"
